[gd_scene load_steps=2 format=3 uid="uid://ccclhsbr6gjcg"]

[ext_resource type="Script" path="res://scene/mainmenu.gd" id="1_241vn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 676.0
offset_top = 345.0
offset_right = 676.0
offset_bottom = 345.0
mouse_filter = 2
script = ExtResource("1_241vn")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -82.0
offset_right = 138.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Main Menu Label" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="Start Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Game"

[node name="Game Selection" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameSelectButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/Game Selection"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Select Game"
popup/item_1/text = "Ping Pong"
popup/item_1/id = 1
popup/item_2/text = "Flappy Bird"
popup/item_2/id = 2

[node name="GameModeOption" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/GameModeOption"]
layout_mode = 2
disabled = true
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Select Game Mode Here"
popup/item_1/text = "Single Player"
popup/item_1/id = 1
popup/item_2/text = "2 Player"
popup/item_2/id = 2

[node name="ControlScheme" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ControlScheme"]
layout_mode = 2
text = "Display Control Scheme"

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/VBoxContainer/ControlScheme"]
layout_mode = 2
alignment = 1

[node name="Quit Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Game Selection/GameSelectButton" to="." method="_on_game_select_button_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/GameModeOption/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/ControlScheme/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
